Basic style is finished

--- a/index.html
+++ b/index.html
@@ -7,6 +7,91 @@
         <title>Document</title>
     </head>
     <body>
+        <div class="container">
+            <div class="image">
+                <div class="logo">
+                    <img src="./odin-lined.png" alt="logo" />
+                    <p>ODIN</p>
+                </div>
+                <div class="credit">
+                    Photo by
+                    <a
+                        href="https://unsplash.com/@katkelley?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                        >Kat Kelley</a
+                    >
+                    on
+                    <a
+                        href="https://unsplash.com/photos/a-sailboat-in-the-middle-of-the-ocean-oiyOy05v5tE?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+                        >Unsplash</a
+                    >
+                </div>
+            </div>
+            <div class="form-section">
+                <div class="description">
+                    <h1>Sign up</h1>
+                </div>
+                <div class="form">
+                    <h2>Let's Do This!</h2>
+                    <div class="input-section">
+                        <form action="" method="post">
+                            <div class="input" id="first-name-input">
+                                <label for="first-name">FIRST NAME</label>
+                                <input
+                                    type="text"
+                                    name="first-name"
+                                    id="first-name"
+                                />
+                            </div>
+                            <div class="input" id="last-name-input">
+                                <label for="last-name">LAST NAME</label>
+                                <input
+                                    type="text"
+                                    name="last-name"
+                                    id="last-name"
+                                />
+                            </div>
+                            <div class="input" id="email-input">
+                                <label for="email">EMAIL</label>
+                                <input type="email" name="email" id="email" />
+                            </div>
+                            <div class="input" id="phone-number-input">
+                                <label for="phone-number">PHONE NUMBER</label>
+                                <input
+                                    type="number"
+                                    name="phone-number"
+                                    id="phone-number"
+                                />
+                            </div>
+                            <div class="input" id="password-input">
+                                <label for="password">PASSWORD</label>
+                                <input
+                                    type="password"
+                                    name="password"
+                                    id="password"
+                                />
+                            </div>
+                            <div class="input" id="confirm-password-input">
+                                <label for="confirm-password"
+                                    >CONFIRM PASSWORD</label
+                                >
+                                <input
+                                    type="password"
+                                    name="confirm-password"
+                                    id="confirm-password"
+                                />
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <div class="submit">
+                    <button>Create Account</button>
+                    <p id="account-check">
+                        Already have an account?
+                        <a href="#" id="log-in-link">Log in</a>
+                    </p>
+                </div>
+            </div>
+        </div>
         <script src="./script.js"></script>
     </body>
 </html>
