Finish form validation

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                                     name="password"
                                     id="password"
                                 />
+                                <span id="error">*Password do not match!</span>
                             </div>
                             <div class="input" id="confirm-password-input">
                                 <label for="confirm-password"
